--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory = hosts
 host_key_checking = False
-remote_user = student
+remote_user = ubuntu
 retry_files_enabled = False
 display_skipped_hosts = False
 #stdout_callback = dense
