--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 inventory = hosts
+private_key_file = ~/.ssh/a3s-key
 host_key_checking = False
 remote_user = ubuntu
 retry_files_enabled = False
