--- a/roles/localhost_config/tasks/main.yaml
+++ b/roles/localhost_config/tasks/main.yaml
@@ -18,12 +18,12 @@
 #  become: yes
 
 #TODO: these node-routes are hard coded, on a day far far from now, MAYBE templatized and smartly created
-- name: Create the pod-routes file for each node. Sets routes to get outbound connections from the calico network
-  copy: 
-    src: "{{  role_path  }}/files/node-routes"
-    dest: "/etc/network/if-up.d/node-routes"
-    mode: "0775"
-  become: yes
+#- name: Create the pod-routes file for each node. Sets routes to get outbound connections from the calico network
+#  copy: 
+#    src: "{{  role_path  }}/files/node-routes"
+#    dest: "/etc/network/if-up.d/node-routes"
+#    mode: "0775"
+# become: yes
 
 # Comment out because routes from host to nodes only make sense whey on the k8s network. 
 #- name: configure routes to nodes (pod routes)
