--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = hosts
-private_key_file = ~/.ssh/alta3-srvs.pem
+private_key_file = ~/.ssh/deploy-k8s-key 
 host_key_checking = False
 remote_user = ubuntu
 retry_files_enabled = False
