fixed many syntax errors, now runs on ubuntu 16.04 bare metal

--- a/roles/master_install/tasks/main.yaml
+++ b/roles/master_install/tasks/main.yaml
@@ -86,12 +86,13 @@
 # ----------------------------------------------------------------------------
 
 #TODO: these node-routes are hard coded, on a day far far from now, MAYBE templatized and smartly created
-#- name: Create the pod-routes file for each node. Sets routes to get outbound connections from the calico network
-#  copy: 
-#    src: "{{  role_path  }}/files/node-routes"
-#    dest: "/etc/network/if-up.d/node-routes"
-#    mode: "0775"
-#  become: yes
+- name: Create the pod-routes file for each node. Sets routes to get outbound connections from the calico network
+  copy: 
+    src: "{{  role_path  }}/files/node-routes"
+    dest: "/etc/network/if-up.d/node-routes"
+    mode: "0775"
+  become: yes
+  when: xenial
 
 - name: configure persistant routes to nodes (pod routes)
   template:
@@ -100,6 +101,7 @@
     mode: 0644
   register: masternet
   become: yes
+  when: not xenial
 
 - name: configure routes to nodes (pod routes) using IP ROUTE
   command: "ip route add {{ hostvars[item].cni_host_subnet }} via {{ hostvars[item].ansible_host }}"
