--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,10 @@
 [defaults]
 inventory = hosts
 host_key_checking = False
-remote_user = student
+remote_user = ubuntu 
 retry_files_enabled = False
 display_skipped_hosts = False
 #stdout_callback = dense
 log_path = ansible.log
 # callback_whitelist = full_skip,log_plays
+private_key_file = /home/ubuntu/.ssh/deploy-k8s-key
