--- a/roles/localhost_config/tasks/main.yaml
+++ b/roles/localhost_config/tasks/main.yaml
@@ -26,7 +26,7 @@
   become: yes
 
 - name: configure routes to nodes (pod routes)
-  command: "ip route add {{ hostvars[item].cni_host_subnet }} via {{ hostvars[item].ansible_host }}"
+  command: "ip route add {{ hostvars[item].cni_host_subnet }} via {{ lookup('dig', hostvars[item].ansible_host) }}"
   loop: "{{ groups['nodes'] }}"
   become: yes
   ignore_errors: True
